--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <body>
         <h1>Text2Meme</h1>
         <p id="blurb">Type something into the text box and see it displayed in meme format.</p>
-        <input type="text" id="memeText" onChange="claps()" value="">
+        <input type="text" id="memeText" onblur="claps()" value="">
         <p id="memeOutput">Memed text displayed here</p>
+        <a href="https://github.com/nwager/MemeifyText" target="_blank" style="position:absolute;bottom:4em;">Github</a>
     </body>
     <script type="text/javascript" src="memeify.js"></script>
 </html>
